[workspace]
members = [
    "calorie_counting",        # Day 1
    "rock_paper_scissors",     # Day 2
    "rucksack_reorganization", # Day 3
    "supply_stacks",           # Day 4
    "camp_cleanup",            # Day 5
    "tuning_trouble",          # Day 6
    "no_space_left_on_device", # Day 7
    "treetop_tree_house",      # Day 8
    "rope_bridge",             # Day 9
    "cathode_ray_tube",        # Day 10
    "monkey_in_the_middle",    # Day 11
    "hill_climbing_algorithm", # Day 12
    "distress_signal",         # Day 13
    "regolith_reservoir",      # Day 14
    "beacon_exclusion_zone",   # Day 15

    "runner",
]
