[package]
name = "runner"
version = "0.0.0"
edition = "2021"

[dependencies]
paste = "1.0"

chumsky = "0.8"

calorie_counting = { path = "../calorie_counting" }
rock_paper_scissors = { path = "../rock_paper_scissors" }
rucksack_reorganization = { path = "../rucksack_reorganization" }
camp_cleanup = { path = "../camp_cleanup" }
supply_stacks = { path = "../supply_stacks" }
tuning_trouble = { path = "../tuning_trouble" }
no_space_left_on_device = { path = "../no_space_left_on_device" }
treetop_tree_house = { path = "../treetop_tree_house" }
rope_bridge = { path = "../rope_bridge" }
cathode_ray_tube = { path = "../cathode_ray_tube" }
