[package]
name = "runner"
version = "0.0.0"
edition = "2021"

[dependencies]
paste = "1.0"

chumsky = "0.8"

calorie_counting = { path = "../calorie_counting" }               # Day 1
rock_paper_scissors = { path = "../rock_paper_scissors" }         # Day 2
rucksack_reorganization = { path = "../rucksack_reorganization" } # Day 3
camp_cleanup = { path = "../camp_cleanup" }                       # Day 4
supply_stacks = { path = "../supply_stacks" }                     # Day 5
tuning_trouble = { path = "../tuning_trouble" }                   # Day 6
no_space_left_on_device = { path = "../no_space_left_on_device" } # Day 7
treetop_tree_house = { path = "../treetop_tree_house" }           # Day 8
rope_bridge = { path = "../rope_bridge" }                         # Day 9
cathode_ray_tube = { path = "../cathode_ray_tube" }               # Day 10
monkey_in_the_middle = { path = "../monkey_in_the_middle" }       # Day 11
hill_climbing_algorithm = { path = "../hill_climbing_algorithm" } # Day 12
